--- a/jssnkr.html
+++ b/jssnkr.html
@@ -40,6 +40,14 @@
           <p>
           Closing November 18th, 9:00 am, IN-app
          </p>
+            
+          <h1>SLAM JAM</h1>
+
+         <a href="https://drop.slamjam.com/products/nike-jordan-footwear-air-jordan-1-retro-high-og-multicolor-j252015"><img class = "store-logo" src="https://cdn.codes.co.uk/img/merchants/122877/360-logo/v1/slam-jam-discount-codes.png" alt="SlamJam Store Logo"></a>
+         <p>
+         Closing November 18th, 1:00 am
+        </p>
+            
         <header classs="soon">Opening Soon</header>            
           <h1>SNIPES USA - Opens November 17th 5:00 am</h1>
           <a href="https://www.snipesusa.com/app.html"><img class = "trailer-cover" src="https://mma.prnewswire.com/media/1153675/SNIPES_grey_1_Logo.jpg" alt="SNIPES USA Logo"></a>
